feat: actualización y refactorización todos los msc